# fiap-ai-tech-challenge-04

./: .flake8  .pre-commit-config.yaml  README.md  config.py  emotion_and_activity.py  labels.txt  main.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: lint.yml
audio/: __init__.py  analyzer.py  pipeline.py
video/: __init__.py  heuristics.py  pipeline.py
