[tool.poetry]
name = "fiap-video-analysis"
version = "0.1.0"
description = "Script to analyze video and detect faces and activies"
authors = [
    "Ademir Pereira <ademirspr@live.com>",
    "Gabriel Santos <gabriel@ogabrielsantos.com.br>",
    "Mauricio Rodrigues <momorodrigues1@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
pandas = "3.0.0"
pillow = "12.1.0"
scikit-learn = "1.8.0"
opencv-python = "4.13.0.90"
numpy = "2.4.1"
deepface = "0.0.98"
tqdm = "4.67.1"
tf-keras = "2.20.1"
mediapipe = "0.10.32"
tensorflow = "2.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_strict_optional = true
show_error_codes = true
warn_unused_ignores = true
