[tool.poetry]
name = "fiap-video-analysis"
version = "0.1.0"
description = "@TODO"
authors = [
    "Ademir Pereira <ademirspr@live.com>",
    "Gabriel Santos <gabriel@ogabrielsantos.com.br>",
    "Mauricio Rodrigues <momorodrigues1@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_strict_optional = true
show_error_codes = true
warn_unused_ignores = true
